// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should parse table data by column preset 1`] = `
[
  {
    "Test 1": 1,
    "Test 2": 4,
    "Test 3": 7,
  },
  {
    "Test 1": 2,
    "Test 2": 5,
    "Test 3": 8,
  },
  {
    "Test 1": 3,
    "Test 2": 6,
    "Test 3": 9,
  },
]
`;

exports[`should parse table data by column.coumn preset 1`] = `
[
  {
    "0": {
      "Test 1": 1,
    },
    "1": {
      "Test 2": 2,
    },
    "2": {
      "Test 3": 3,
    },
  },
  {
    "0": {
      "Test 1": 4,
    },
    "1": {
      "Test 2": 5,
    },
    "2": {
      "Test 3": 6,
    },
  },
  {
    "0": {
      "Test 1": 7,
    },
    "1": {
      "Test 2": 8,
    },
    "2": {
      "Test 3": 9,
    },
  },
]
`;

exports[`should parse table data by column.row preset 1`] = `
{
  "0": {
    "Test 1": 1,
    "Test 2": 4,
    "Test 3": 7,
  },
  "1": {
    "Test 1": 2,
    "Test 2": 5,
    "Test 3": 8,
  },
  "2": {
    "Test 1": 3,
    "Test 2": 6,
    "Test 3": 9,
  },
}
`;

exports[`should parse table data by row preset (default when undefined) 1`] = `
[
  {
    "Test 1": 1,
    "Test 2": 4,
    "Test 3": 7,
  },
  {
    "Test 1": 2,
    "Test 2": 5,
    "Test 3": 8,
  },
  {
    "Test 1": 3,
    "Test 2": 6,
    "Test 3": 9,
  },
]
`;

exports[`should parse table data by row preset 1`] = `
[
  {
    "Test 1": 1,
    "Test 2": 4,
    "Test 3": 7,
  },
  {
    "Test 1": 2,
    "Test 2": 5,
    "Test 3": 8,
  },
  {
    "Test 1": 3,
    "Test 2": 6,
    "Test 3": 9,
  },
]
`;

exports[`should parse table data by row.column preset 1`] = `
{
  "0": {
    "Test 1": 1,
    "Test 2": 4,
    "Test 3": 7,
  },
  "1": {
    "Test 1": 2,
    "Test 2": 5,
    "Test 3": 8,
  },
  "2": {
    "Test 1": 3,
    "Test 2": 6,
    "Test 3": 9,
  },
}
`;

exports[`should parse table data by row.row preset 1`] = `
[
  {
    "0": {
      "Test 1": 1,
    },
    "1": {
      "Test 2": 2,
    },
    "2": {
      "Test 3": 3,
    },
  },
  {
    "0": {
      "Test 1": 4,
    },
    "1": {
      "Test 2": 5,
    },
    "2": {
      "Test 3": 6,
    },
  },
  {
    "0": {
      "Test 1": 7,
    },
    "1": {
      "Test 2": 8,
    },
    "2": {
      "Test 3": 9,
    },
  },
]
`;

exports[`should parse table data using headers option 1`] = `
{
  "0": {
    "Test 1": 1,
    "Test 2": 4,
    "Test 3": 7,
  },
  "1": {
    "Test 1": 2,
    "Test 2": 5,
    "Test 3": 8,
  },
  "2": {
    "Test 1": 3,
    "Test 2": 6,
    "Test 3": 9,
  },
}
`;
